fix(style): adjust the vertical position of TOC expand/collapse buttons

--- a/app/view/components/toc.module.less
+++ b/app/view/components/toc.module.less
@@ -57,7 +57,7 @@ li.item {
     > a > button {
         float: left;
         margin: 0; padding: 0;
-        width: 1.5em; height: 1em;
+        width: 1.5em; height: 1.5em;
         position: relative;
         top: calc(0.02em);
 
