--- a/app/view/constants.less
+++ b/app/view/constants.less
@@ -68,5 +68,7 @@
     font-family: 'Source Code Pro', Menlo, Consolas, monospace;
 };
 @ui-font-family: {
-    font-family: 'Helvetica', 'Arial', 'Meiryo UI', sans-serif;
+    // I personally prefer Helvetica, but it's displayed slightly off in the
+    // vertical direction on Firefox for Mac.
+    font-family: 'Helvetica Neue', 'Arial', 'Helvetica', 'Meiryo UI', sans-serif;
 };
